--- a/css/main.css
+++ b/css/main.css
@@ -172,8 +172,9 @@ a.btn:after {
 	float: left;
 }
 
-.navigation li {
-	padding: 10px 10px 20px;
+.navigation li,
+.navigation a {
+	padding: 10px 5px 30px;
 }
 
 .secondery li {
@@ -194,21 +195,17 @@ a.btn:after {
 	content: '';
 }
 
-.navigation li:hover {
-	background: #fcfcfc;
-	border: 1px solid #D5D5D5;
-	box-shadow: -5px 9px 8px rgba(0,0,0,0.4);
-}
-
 .navigation a,
 .secondery a {
 	color: rgb(88, 89, 81);
 }
 
-
-.navigation a:hover,
-.navigation a:active,
-.navigation a:focus {
+.navigation li a:hover,
+.navigation li a:active,
+.navigation li a:focus {
+	background: #fcfcfc;
+	border: 1px solid #D5D5D5;
+	box-shadow: -5px 9px 8px rgba(0,0,0,0.4);
 	color: rgb(51, 153, 204);
 }
 
@@ -217,7 +214,6 @@ a.btn:after {
 .secondery a:focus {
 	text-decoration: underline;
 }
-
 
 .main {
 	margin: 35px 0 0 50px;
@@ -397,7 +393,6 @@ h4.sitemap-list-title {
 	position: absolute;
 	bottom: 5px;
 	left: 10px;
-
 }
 
 .social-links li {
@@ -633,10 +628,20 @@ header.site {
    #footer
    ========================================================================== */
 
-footer.site {
+footer.large-site,
+footer.medium-site {
 	background: #2d2d2d;
 	position: relative;
 	z-index: 3;
+}
+
+footer.medium-site,
+footer.medium-site > .content-wrapper {
+	height: 40px;
+}
+
+footer.medium-site {
+	display: none;
 }
 
 .latest-blog-container {
@@ -1256,8 +1261,32 @@ a.view-all  {
 		font-size: 0.8em;
 	}
 
-	.navigation.main a {
+	nav.navigation.main > ul > li > a {
 		font-weight: 700;
+	}
+
+	.mega-dropdwon {
+		left: -155px;
+		width: 768px;
+	}
+
+	.links > ul,
+	.links > ul > li {
+		width: 200px;
+	}
+
+	.marketing-image {
+		padding-left: 0;
+		margin-top: -50px;
+	}
+
+	.marketing-image::before {
+		margin-right: 20px;
+	}
+
+	.marketing-image > img {
+		width: 211px;
+		height: 138px;
 	}
 
 	.promotion-item {
@@ -1406,8 +1435,236 @@ a.view-all  {
 		background: url(../img/back_top_tab.png) no-repeat top center;
 	}
 
+	footer.large-site {
+		display: none;
+	}
+
+	footer.medium-site {
+		display: block;
+	}
+
+	.social-links {
+		bottom: 5px;
+		left: 680px;
+	}
+
+	.sub-navigation {
+		margin-bottom: 0;
+		margin-top: 10px;
+	}
+
+	.sub-navigation li > a.subscribe {
+		color: #fff;
+		text-transform: uppercase;
+	}
+	
+}
+
+
+
+
+/* ==========================================================================
+   #small breakpoint 767px and lower
+   ========================================================================== */
+
+@media screen and (max-width: 767px) {
+
+	.content-wrapper {
+		width: 100%;
+	}
+
+	header.site {
+		height: 60px;
+		padding-top: 10px;
+	}
+
+	.brand {
+		position: absolute;
+		top: 0;
+		left: 50%;
+		margin-left: -54.5px;
+		width: 109px;
+		height: 36px;
+		float: none;
+		background: url(../img/comverse-logo-medium.png) no-repeat top left;
+		/*margin-top: 24px;*/
+    }
+
+    .secondery {
+    	display: none;
+    }
+
+	.searchbox {
+		display: inline-block;
+		background: none;
+		border: 0;
+		width: 38px;
+		height: auto;
+		position: absolute;
+		top: 0;
+		right: 10px;
+		float: none;
+		margin-top: 0;
+	}
+
+	.searchbox::before {
+		content: '';
+	}
+
+	.searchbox:hover {
+		border-color: none;
+	}
+
+	input[type="submit"] {
+		background: url(../img/searchBtnMobile.png) no-repeat scroll center center, linear-gradient(to bottom, #f2f2f2 0%,#e5e5e5 100%);
+		width: 38px;
+		height: 38px;
+		border-radius: 5px;
+		float: none;
+		border: 1px solid #d9d9d9;
+	}
+
+	input[type="search"] {
+		display: none;
+	}
+
+	.main {
+		display: block;
+		background: linear-gradient(to bottom, #f2f2f2 0%,#e5e5e5 100%);
+		width: 38px;
+		height: 38px;
+		position: absolute;
+		top: 0;
+		left: 10px;
+		border-radius: 5px;
+		float: none;
+		border: 1px solid #d9d9d9;
+		margin: 0;
+	}
+
+	.navigation.main ul {
+		display: none;
+	}
+
+	.slideshow-container {
+		/*position: relative;*/
+		height: 900px;
+	}
+
+	.slideshow-container > .content-wrapper {
+		height: 900px;
+	}
+
+/*	.slideshow-control {
+		position: absolute;
+		top: 50px;
+	}
+*/
+	.slides-container li {
+		height: 900px;
+	}
+
+	.caption-container {
+		background: url(../img/weDoBG.png) repeat scroll 0 0 #3399cc;
+		padding: 10px 0 10px 10px;
+		min-height: 150px;
+	}
+
+	.caption-container > h2 {
+		width: 100%;
+		font-size: 1.7em;
+		font-weight: 700;
+	}
+
+	.caption-container > h2,
+	.caption-container > p {
+		margin-bottom: 15px;
+	}
+
+	.caption-container > .btn {
+		position: absolute;
+		top: 170px;
+		left: 0;
+	}
+
+		.promotions {
+		padding-top: 200px; 
+		position: absolute;
+		z-index: 40;
+		left: 0;
+		/*top: 200px;*/
+		bottom: 30px;
+	}
+
+	.promotion-item {
+		position: relative;
+		float: left;
+		width: 100%;
+		height: 174px;
+		padding: 20px 10px;
+		border-radius: 6px;
+		box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
+	}
+
+	.promotion-item::after {
+		content: '';
+		background: url(../img/promotion-item-arrow.png) no-repeat scroll 0 0;
+		width: 11px;
+		height: 17px;
+		position: absolute;
+		display: block;
+		top: 50%;
+		right: 10px;
+	}
+	.promotion-item,
+	.promotion-item:first-of-type,
+	.promotion-item:last-of-type {
+		margin: 5px 0;
+	}
+
+	.promotion-item:last-of-type {
+		float: left;
+	}
+
+	.promotion-item p {
+		font-size: 1.3em;
+		width: 80%;
+	}
+
+	.promotion-item > footer {
+		position: absolute;
+		bottom: 10px;
+		margin: 0;
+		padding: 0;
+	}
+
+	h2.section {
+		font-size: 1.5em
+	}
+
+	.solutions {
+		padding: 10px 0 30px 0;
+	}
+
+	.solutions .btn {
+		display: none;
+	}
+
+	.our-solutions {
+		padding: 0;
+
+	}
+
+	.solution {
+		width: 33%;
+		margin-top: 30px;
+		font-size: 0.8em;
+	}
+
+
 
 
 
 	
 }
+
