refactoring to megadropdown menu css

--- a/css/main.css
+++ b/css/main.css
@@ -200,9 +200,15 @@ a.btn:after {
 	color: rgb(88, 89, 81);
 }
 
-.navigation li a:hover,
-.navigation li a:active,
-.navigation li a:focus {
+.navigation a:hover,
+.navigation a:active,
+.navigation a:focus {
+	color: rgb(51, 153, 204);
+}
+
+.navigation li:hover,
+.navigation li:active,
+.navigation li:focus {
 	background: #fcfcfc;
 	border: 1px solid #D5D5D5;
 	box-shadow: -5px 9px 8px rgba(0,0,0,0.4);
@@ -228,6 +234,7 @@ a.btn:after {
 nav.main > ul {
 	position: relative;
 	display: inline-block;
+	z-index: 100;
 }
 
 .mega-dropdwon {
@@ -274,6 +281,7 @@ nav.main > ul {
 	border: none;
 	box-shadow: none;
 }
+
 
 .marketing-image {
 	display: inline-block;
@@ -555,7 +563,7 @@ header.site {
 .slideshow-container > .content-wrapper {
 	height: 550px;
 	position: relative;
-	z-index: 9999;
+	/*z-index: 9999;*/
 }
 
 .slideshow-control {
