--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -1,16 +1,22 @@
-/* #FONT IMPORT */
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
-
-/* ////////////////////////////////////////////////////////////////////////////////*/
-/* #STYLE GUIDE CSS - FOR VIEWING THE DOC */
+/* ==========================================================================
+   #comverse style-guide
+   ========================================================================== */
 
 .sg-body {
-	background: #e0e0e0;
+	background: #fff;
 }
 
-.wrapper {
+.sg-wrapper {
+	background: #e0e0e0;
+	padding: 15px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	border-radius: 10px;
+}
 
+.sg-inner-wrapper {
+	height: auto;
 }
 
 .blue {
@@ -19,33 +25,37 @@
 
 .sg-footer {
 	background: #000;
+	padding-left: 20px;
 }
-
-
 
 .sg-heading {
 	font: arial 2em/2;
 	color: #9b9b9b;
-	border-bottom: 1px solid #9b9b9b;
+	border-bottom: 1px solid #000;
 	margin: 10px 0 30px 0;
-	font-weight: 700;
-	border-width: 2px;
+	font-weight: 300;
+	border-width: 1px;
 	margin-top: 50px;
+	text-transform: uppercase;
+	color: #000;
 }
 
 h1.sg-heading {
 	font-size: 2.2em;
+	position: relative;
+	max-width: 960px;
+	margin: 0 auto;
+	margin-top: 20px;
 }
 
 h2.sg-heading  {
-	font-size: 1.8em;
+	font-size: 1.3em;
 }
 
 h3.sg-heading  {
-	font-size: 1.4em;
+	font-size: 1em;
 }
 
 h4.sg-heading  {
-	font-size: 1.2em;
+	font-size: 0.8em;
 }
-/* ////////////////////////////////////////////////////////////////////////////////*/
