--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -4,19 +4,15 @@
    ========================================================================== */
 
 .sg-body {
-	background: #fff;
+	background: #95a5a6;
 }
 
 .sg-wrapper {
-	background: #e0e0e0;
-	padding: 15px;
-	margin-top: 30px;
 	margin-bottom: 30px;
-	border-radius: 10px;
 }
 
 .sg-inner-wrapper {
-	height: auto;
+	height: 200px;
 }
 
 .blue {
@@ -29,15 +25,11 @@
 }
 
 .sg-heading {
-	font: arial 2em/2;
-	color: #9b9b9b;
-	border-bottom: 1px solid #000;
-	margin: 10px 0 30px 0;
-	font-weight: 300;
-	border-width: 1px;
+	color: #2c3e50;
+	border-bottom: 1px solid #2c3e50;
 	margin-top: 50px;
+	font-weight: 300;
 	text-transform: uppercase;
-	color: #000;
 }
 
 h1.sg-heading {
@@ -50,6 +42,13 @@ h1.sg-heading {
 
 h2.sg-heading  {
 	font-size: 1.3em;
+}
+
+h3.sg-heading,
+h4.sg-heading {
+	text-transform: lowercase;
+	border-bottom: 0;
+	margin: 10px 0;
 }
 
 h3.sg-heading  {
